[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "imgrid"
version = "0.1.3"
authors = [
    { name="Aaron Cheung", email="aaronthcheung@gmail.com" },
]
description = "Utility for gridifing images"
readme = {file = "readme.md", content-type = "text/markdown"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "opencv-python",
    "jsonpath-ng",
    "shapely",
    "tqdm"
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/AaronTHCheung/imgrid"
"Bug Tracker" = "https://github.com/AaronTHCheung/imgrid/issues"

[project.scripts]
imgrid = "imgrid.imgrid:main"

[tool.setuptools]
packages = [
    "imgrid"
]